# GSync

./: Cargo.toml  README.md
src/: config.rs  env.rs  macros.rs  main.rs  sync.rs
src/api/: drive.rs  mod.rs  oauth.rs
src/login/: callback_endpoint.rs  db.rs  mod.rs  port.rs
src/sync/: mod.rs
